--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
   <title></title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/98.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/default.css">
@@ -19,40 +20,69 @@
 <body>
   <div class="container">
     <section id="main" class="mx-auto my-5 py-5 px-3">
-      <h1>COMBTI 검사</h1>
-      <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
-        <img src="./img/main.png" alt="mainImage" class="img-fluid">
-      </div>
-      <p>
-        <br>컴퓨터 공학용 성격 유형 검사입니다. <br>
-        아래 시작하기 버튼을 눌러 시작해 주십시오.
-      </p>
-      <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">시작하기</button>
-    </section>
-    <section id="qna">
-      <div class="status mx-auto mt-5">
-        <div class="statusBar">
+      <div class = "window">
+        <div class = "title-bar">
+          <div class = "title-bar-text">
+            ITZI
+          </div>
+        </div>
+        <div class = "window-body">
+          <h1>COMBTI 검사</h1>
+          <div class="col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+            <img src="./img/main.png" alt="mainImage" class="img-fluid">
+          </div>
+          <p>
+            <br>컴퓨터 공학용 성격 유형 검사입니다. <br>
+            아래 시작하기 버튼을 눌러 시작해 주십시오.
+          </p>
+          <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">시작하기</button>
+          
         </div>
       </div>
-      <div class="qBox my-5 py-3 mx-auto">
+    </section>
+    <section id="qna">
+      <div class = "window">
+        <div class = "title-bar">
+          <div class = "title-bar-text">
+            ITZI
+          </div>
+        </div>
+        <div class = "window-body">
+          <div class="status mx-auto mt-5">
+            <div class="statusBar">
+            </div>
+          </div>
+        
+          <div class="qBox my-5 py-3 mx-auto">
 
-      </div>
-      <div class="answerBox">
+          </div>
+          <div class="answerBox">
 
+          </div>
+        </div>
       </div>
     </section>
     <section id="result" class="mx-auto my-5 py-5 px-3">
-      <h1>당신의 결과는?!</h1>
-      <div class="resultname">
+      <div class = "window">
+        <div class = "title-bar">
+          <div class = "title-bar-text">
+            ITZI
+          </div>
+        </div>
+        <div class = "window-body">
+          <h1>당신의 결과는?!</h1>
+          <div class="resultname">
 
-      </div>
-      <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
+          </div>
+          <div id="resultImg" class="my-3 col-lg-6 col-md-8 col-sm-10 col-12 mx-auto">
 
-      </div>
-      <div class="resultDesc">
+          </div>
+          <div class="resultDesc">
 
+          </div>
+          <button type="button" class="btn btn-outline-danger mt-3" onclick="js:goAll()">다른 결과보기</button>
+        </div>
       </div>
-      <button type="button" class="btn btn-outline-danger mt-3" onclick="js:goAll()">다른 결과보기</button>
     </section>
     <section id="allResults" class="mx-auto my-5 py-5 px-3">
       <div class="resultBox">
