--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img src="./img/main.png" alt="mainImage" class="img-fluid">
           </div>
           <p>
-            <br>컴퓨터 공학용 성격 유형 검사입니다. <br>
+            <br>컴퓨터 공학용<br>성격 유형 검사입니다.<br>
             아래 시작하기 버튼을 눌러 시작해 주십시오.
           </p>
           <button type="button" class="btn btn-outline-danger mt-3" onclick="js:begin()">시작하기</button>
